--- a/homework 4/homework 4/hw4.html
+++ b/homework 4/homework 4/hw4.html
@@ -1,24 +1,15 @@
 <head>
     <title>Homework 4</title>
     <style>
-        .header {
-            background-color: #f3f3f3a2;
-            padding: 15px;
-            text-align: center;
-         }   
         #container_radar {
-            float: left;
-            width: 50%;
             min-width: 360px;
-            max-width: 1000px;
+            max-width: 800px;
             height: 600px;
             margin: 0 auto;
         }
         #container_hist{
-            float: left;
-            width: 50%;
             max-width: 1000px;
-            height: 600px;
+            height: 800px;
             margin: 1em auto;
         }
         caption {
@@ -57,23 +48,16 @@
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/modules/wordcloud.js"></script>
         <script src="https://code.highcharts.com/highcharts-more.js"></script>
-    <div class="header">
-        <h1>Data Visualization for Jennifer Lawrence</h1>
-        <h4>For code and interactive plots: <link>https://github.com/clairemhl/DSC-106-Homeword-4</link> </h4>
-    </div>
-        
+    <h1>Jennifer Lawrence report</h1>
     <h3>Here are some data visualizations for my favorite movie star Jennifer Lawrence. 
         As we all know, Jennifer Lawrence is excellent at acting and have starred in many kinds of movies. 
     </h3>
-    <h3>The radar chart below on the left shows the diverse of genres that Jennifer devoted to. Documentary and comedy are two big categories that 
-        she has a concrete interest in. For other categories, though it may not shown as a huge amount, it does not mean Jennifer does not care. For genres like sci-fi or adventure, we all know Jennifer had a lead role in movies in these categories, which are also a big hit. 
-    </h3>
-    <h3>
-        The Histogram chart below on the right shows the distribution of the ratings she got for her movies. Most of her work recieves 5.5 -7.5, which is pretty great.
-    </h3>
+    <h3>The radar chart below shows what genres of movie that Jennifer have specific interest in: Mostly documentary and commedy</h3>
     <div id = "container_radar" ></div>
     <script src = 'radar.js'></script>
-    
+    <h3>
+        The Histogram chart below shows the distribution of the ratings she got for her movies. Most of her work recieves 5.5 -7.5, which is pretty great.
+    </h3>
     <script src="https://code.highcharts.com/modules/histogram-bellcurve.js"></script>
     <div id = 'container_hist'></div>
     <script src = 'histogram.js'></script>
